ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/MemberVariableDeclarations/parserMemberVariableDeclaration1/input.ts.stderr
error: Unexpected token `Foo`. Expected * for generator, private key, identifier or async
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/MemberVariableDeclarations/parserMemberVariableDeclaration1/input.ts:2:17
  |
2 |   public public Foo;
  |                 ^^^

